# rust-monadic

./: Cargo.toml  README.md
docs/: index.html
docs/doc/: aliases.js  search-index.js  settings.html  source-files.js
docs/doc/monadic/: all.html  index.html  macro.monadic!.html  macro.monadic.html  sidebar-items.js
docs/doc/src/monadic/: lib.rs.html
example/: Cargo.toml
example/src/: main.rs
examples/: comprehension.rs  comprehension2.rs  console_io.rs  monadic.rs  reader1.rs  reader_trans1.rs  reader_trans2.rs  state1.rs  state_trans1.rs  writer1.rs  writer2.rs  writer_trans1.rs  writer_trans2.rs
monadic/: Cargo.toml
monadic/src/: lib.rs
src/: intoiter.rs  lib.rs  mio.rs  monad.rs  monoid.rs  reader.rs  reader_trans.rs  state.rs  state_trans.rs  util.rs  writer.rs  writer_trans.rs
